--- a/Data_Science_Tools_and_Ecosystem.ipynb
+++ b/Data_Science_Tools_and_Ecosystem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPW150boFi6Gu+H3fgLJ8fL",
+      "authorship_tag": "ABX9TyP2r1J6eMwN0c/NdhTfZlts",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
       "source": [
         "# This a simple arithmetic expression to mutiply then add integers.\n",
         "x = (3*4) + 5\n",
-        "print(x)\n"
+        "print(x)"
       ],
       "metadata": {
         "colab": {
@@ -143,22 +143,22 @@
         "# As 1 hr has 60 minutes, we must divide 200 by 60 to obtain the equivalency.\n",
         "\n",
         "y = minutes/minh\n",
-        "print(y)"
+        "print(\"200 minutes are equivalent to\", y,\"hs\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hft5W83tj4Nd",
-        "outputId": "8cacdc84-5246-43aa-cb35-8c8eef51a3ea"
+        "outputId": "2176e445-b33c-4e8a-a1cc-3037aaa74af7"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3.3333333333333335\n"
+            "200 minutes are equivalent to 3.3333333333333335 hs\n"
           ]
         }
       ]
